force-app/main/default/objects/DeclineWithdrawalQuestionnaire__c/DeclineWithdrawalQuestionnaire__c.object-meta.xml
<CustomObject>
    <label>Decline/Withdrawal Questionnaire</label>
    <nameField>
        <displayFormat>DWQ-{00000}</displayFormat>
        <label>Decline/Withdrawal Questionairre Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decline/Withdrawal Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>