force-app/main/default/objects/DeclineWithdrawalQuestionnaire__c/fields/AnyOtherInformation__c.field-meta.xml
<CustomField>
    <fullName>AnyOtherInformation__c</fullName>
    <label>Any Other Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>