force-app/main/default/objects/DeclineWithdrawalQuestionnaire__c/fields/ApplicantEmailId__c.field-meta.xml
<CustomField>
    <fullName>ApplicantEmailId__c</fullName>
    <label>Applicant Email Id</label>
    <type>Email</type>
</CustomField>