force-app/main/default/objects/DeclineWithdrawalQuestionnaire__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Decline/Withdrawal Questionnaires</relationshipLabel>
    <relationshipName>Decline_Withdrawal_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>