force-app/main/default/objects/DeclineWithdrawalQuestionnaire__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>