force-app/main/default/objects/DeclineWithdrawalQuestionnaire__c/fields/Other_Institute_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Institute_Name__c</fullName>
    <label>Other Institute Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>