force-app/main/default/objects/DeclineWithdrawalQuestionnaire__c/fields/Reasons_for_Choice_Other__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Choice_Other__c</fullName>
    <label>Reasons for Choice - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>