force-app/main/default/objects/DeclineWithdrawalQuestionnaire__c/fields/Reasons_for_Choice_Placement_Roles__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Choice_Placement_Roles__c</fullName>
    <label>Reasons for Choice - Placement Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>