force-app/main/default/objects/DeclineWithdrawalQuestionnaire__c/fields/ReasonsForYourChoice__c.field-meta.xml
<CustomField>
    <fullName>ReasonsForYourChoice__c</fullName>
    <label>Reasons For Your Choice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perceived brand</fullName>
            </value>
            <value>
                <fullName>Ranking</fullName>
            </value>
            <value>
                <fullName>Lower fees</fullName>
            </value>
            <value>
                <fullName>Better return on investment</fullName>
            </value>
            <value>
                <fullName>Better placements - type of roles being offered</fullName>
            </value>
            <value>
                <fullName>Flexibility of choosing specialization/concentration in the 2nd year</fullName>
            </value>
            <value>
                <fullName>Quality of teaching-learning</fullName>
            </value>
            <value>
                <fullName>Extent and nature of international exchange</fullName>
            </value>
            <value>
                <fullName>Want to work, before pursuing MBA education</fullName>
            </value>
            <value>
                <fullName>Got a promotion at work</fullName>
            </value>
            <value>
                <fullName>Closer to home</fullName>
            </value>
            <value>
                <fullName>Financial constraints</fullName>
            </value>
            <value>
                <fullName>Want to appear for entrance exams next year to improve my scores</fullName>
            </value>
            <value>
                <fullName>Any other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>