force-app/main/default/objects/DeclineWithdrawalQuestionnaire__c/fields/WhichInstituteAreYouJoining__c.field-meta.xml
<CustomField>
    <fullName>WhichInstituteAreYouJoining__c</fullName>
    <label>Which Institute Are You Joining?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IIM A</fullName>
            </value>
            <value>
                <fullName>IIM B</fullName>
            </value>
            <value>
                <fullName>IIM C</fullName>
            </value>
            <value>
                <fullName>IIM L</fullName>
            </value>
            <value>
                <fullName>IIM K</fullName>
            </value>
            <value>
                <fullName>IIM I</fullName>
            </value>
            <value>
                <fullName>FMS</fullName>
            </value>
            <value>
                <fullName>XLRI</fullName>
            </value>
            <value>
                <fullName>ISB</fullName>
            </value>
            <value>
                <fullName>MDI</fullName>
            </value>
            <value>
                <fullName>New IIMs</fullName>
            </value>
            <value>
                <fullName>IIM Mumbai</fullName>
            </value>
            <value>
                <fullName>Going abroad for further studies</fullName>
            </value>
            <value>
                <fullName>Joining some other B-School</fullName>
            </value>
            <value>
                <fullName>Not joining a B-School this year</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>